[gd_scene load_steps=7 format=3 uid="uid://bfla10se41emq"]

[ext_resource type="Script" path="res://Scripts/player/tile_map_detector.gd" id="1_x2y86"]
[ext_resource type="PackedScene" uid="uid://ck8cocmaryugc" path="res://Scenes/Sound/sfx_handler.tscn" id="2_gxqf4"]
[ext_resource type="AudioStream" uid="uid://bj5scnxu0wj44" path="res://Audio/Sfx/item_collected.mp3" id="3_epp7d"]
[ext_resource type="AudioStream" uid="uid://4qju1vilj2a8" path="res://Audio/Sfx/paper_collect.mp3" id="4_trd3d"]
[ext_resource type="AudioStream" uid="uid://buy46t04e026s" path="res://Audio/Sfx/damage.mp3" id="5_fvoib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kwvrn"]
size = Vector2(36.8656, 26.056)

[node name="Tilemapdetector" type="Area2D"]
collision_layer = 4
collision_mask = 19
script = ExtResource("1_x2y86")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kwvrn")

[node name="itemCollectedSfx" parent="." instance=ExtResource("2_gxqf4")]
stream = ExtResource("3_epp7d")

[node name="PaperCollectedSfx" parent="." instance=ExtResource("2_gxqf4")]
stream = ExtResource("4_trd3d")

[node name="DamageSfx" parent="." instance=ExtResource("2_gxqf4")]
stream = ExtResource("5_fvoib")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
